--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
