--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
